--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: peek
-Title: What the Package Does (one line, title case)
+Title: Inspect Your Pipe Chains
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("David", "Laing", email = "davidkendalllaing@gmail.com", role = c("aut", "cre"))
+Description: Helps you inspect and clean up chains of tidyverse commands.
 Depends: R (>= 3.3.1)
-License: What license is it under?
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
