--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,5 +7,5 @@ Depends: R (>= 3.3.1)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-Suggests: testthat
+Suggests: testthat, dplyr
 RoxygenNote: 6.0.1
